@@ -4,6 +4,7 @@ All notable changes to this project will be documented in this file.
 ## [1.9]
 
 ### Added
+  - Workbook#create
   - Excel#workbooks, each_workbook, each_workbook_with_index
 
 ## [1.6]
